added popup when removing node. made notes editable.

--- a/style/todo.css
+++ b/style/todo.css
@@ -59,6 +59,9 @@ body {
 .note-content {
     padding: 0 5px;
 }
+.note-content p {
+    white-space: pre-wrap;
+}
 .note-trash {
     margin-left: 10px;
 }
