--- a/templates/Note.html
+++ b/templates/Note.html
@@ -1,9 +1,11 @@
-<h3 class="note-header">{{data.title}} 
+<div class="note-inner">
+    <h3 class="note-header">{{data.title}} 
     <a ng-click="doRemove()" class="note-trash"><span class="glyphicon glyphicon-trash"></span></a>
 </h3>
-<div class="note-content" ng-dblclick="edit($event)">
-    <p ng-hide="editMode">{{data.text}}</p>
-    <div ng-show="editMode">
-        <textarea ng-model="data.text" rows="5" ng-blur="finishEdit()"></textarea>
+    <div class="note-content" ng-dblclick="edit($event)">
+        <p ng-hide="editMode">{{data.text}}</p>
+        <div ng-show="editMode">
+            <textarea ng-model="data.text" rows="5" ng-blur="finishEdit()"></textarea>
+        </div>
     </div>
 </div>
